# pyawn

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: log_tokens.py
.claude/specs/: 01-cli.md  02-board-display.md  03-openings-data.md  04-study-mode.md  05-drill-mode.md  06-stockfish-engine.md  07-progress-db.md
.claude/steering/: product.md  structure.md  tech.md
docs/: spec-changelog.md  workflow.md
src/pyawn/: __main__.py  cli.py
src/pyawn/board/: renderer.py
src/pyawn/openings/: loader.py
src/pyawn/openings/data/: sicilian.json
src/pyawn/study/: session.py
src/pyawn/ui/: theme.py
tests/unit/: test_openings_loader.py  test_study_session.py
